--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=product_service_110524
 logging.level.org.springframework.web: DEBUG
 server.port=8081
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/product_service_may_24
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/product_service_may_24
+spring.datasource.url=jdbc:mysql://localhost:3306/product_service_may_24
 spring.datasource.username=product_service_may_24
 #spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
